--- a/sitemap.html
+++ b/sitemap.html
@@ -23,9 +23,10 @@
 <meta name="designer" content="Emmanuel Koomson">
 <meta name="reply-to" content="hilaxmedia.com@gmail.com">
 <meta name="owner" content="Hilax Media Web Design and Digital Marketing Agency">
-<meta name="subject" content="Website Design & Web Design Services In Ghana,Leading Web Design Company in Ghana">
+<meta name="subject" content="Sitemap For The Best  Web Design Services In Ghana,Leading Web Design Company in Ghana">
 <meta name="copyright"content="Hilax Media">
 <meta name="language" content="ES">
+<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-logo.png"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-banner.png"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-brand.png"/>
@@ -41,10 +42,8 @@
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
 <meta property="og:type" content="website" />
-<meta name="description" content="Sitemap | Best Leading Web Design Company in Ghana - 
-Website Development, E-Commerce. Call Us: +233570816171.">
-<meta name="keywords" content="Website design, web design , website ,
-Website design services, Website Design Company">
+<meta name="description" content="Sitemap For The Best  Web Design Services In Ghana,Leading Web Design Company in Ghana">
+<meta name="keywords" content="Sitemap,Hilax Media,Ghana Website Designers in Ghana">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Sitemap| Hilax Media Web & Digital Marketing In Ghana|
  Leading Website Designers"/>
@@ -53,8 +52,7 @@ Website design services, Website Design Company">
 <meta name="geo.placename" content="Takoradi" />
 <meta name="geo.position" content="4.887401;-1.751932" />
 <meta name="ICBM" content="4.887401, -1.751932" />
-<meta property="og:description" content=" Experts in Website design,
- Web Development, E-Commerce, SEO and Digital Marketing Services.  ">
+<meta property="og:description" content=" Sitemap For The Best  Web Design Services In Ghana,Leading Web Design Company in Ghana ">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
 <meta property="og:url" content="https://www.hilaxmedia.com/sitemap.html" />
@@ -63,8 +61,7 @@ Website design services, Website Design Company">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Sitemap| Hilax Media Web & Digital Marketing In Ghana|
 Leading Website Designers" />
-<meta name="twitter:description" content="Sitemap | Best Leading Web Design Company in Ghana - 
-Website Development, E-Commerce. Call Us: +233570816171." />
+<meta name="twitter:description" content="Sitemap For The Best  Web Design Services In Ghana,Leading Web Design Company in Ghana" />
 <meta name="twitter:site" content="https://www.hilaxmedia.com"/>
 <meta name="twitter:url" content="https://www.hilaxmedia.com/sitmap.html"/>
 <!-- twitter  -->
@@ -212,8 +209,8 @@ Website Development, E-Commerce. Call Us: +233570816171." />
 	<div id="top">
 		<nav>hilaxmedia.com HTML Site Map</nav>
 		<h3>
-<!-- <span>Last updated: 2019, November 6<br /> -->
-Total pages: 13</span>
+
+Total pages: 20</span>
 <a href="http://hilaxmedia.com">hilaxmedia.com Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -225,7 +222,7 @@ Total pages: 13</span>
             <li class="lhead">/ </li>
             <li><ul class="level-2">
 
-            <li class="lhead">hilaxmedia.com/  <span class="lcount">12 pages</span></li>
+            <li class="lhead">hilaxmedia.com/  <span class="lcount">20 pages</span></li>
             
 <li class="lpage"><a href="https://hilaxmedia.com/" title="Website Design | Web Design Company in Ghana | Hilax Media">Website Design | Web Design Company in Ghana | Hilax Media</a></li>
 <li class="lpage"><a href="https://hilaxmedia.com/about" title=" Web Design Agency in Ghana |Leading Website Design Company | Hilax Media"> Web Design Agency in Ghana |Leading Website Design Company | Hilax Media</a></li>
@@ -234,6 +231,33 @@ Total pages: 13</span>
 <li class="lpage"><a href="https://hilaxmedia.com/search-engine-optimization" title="SEO Company in Accra Ghana | SEO Consultant Services Ghana">SEO Company in Accra Ghana | SEO Consultant Services Ghana</a></li>
 <li class="lpage"><a href="https://hilaxmedia.com/digital-marketing" title="Digital Marketing Services Company | Result Oriented Online Marketing| Hilax Media">Digital Marketing Services Company | Result Oriented Online Marketing| Hilax Media</a></li>
 <li class="lpage"><a href="https://hilaxmedia.com/fag" title="Frequently Asked Questions | Hilax Media">Frequently Asked Questions | Hilax Media</a></li>
+
+<li class="lpage"><a href="https://hilaxmedia.com/blog"
+title="Blog | Website Designers in Ghana">Blog | Website Designers in Ghana</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/5-Website-Builders-That-Actuall-Works-!"
+ title="5 Website Builders That Actuall Works !">5 Website Builders That Actuall Works !</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/5-Effective-Tips-Of-Responsive-Web-Design"
+ title="5 Effective Tips Of Responsive Web Design">5 Effective Tips Of Responsive Web Design</a></li>
+
+ <li class="lpage"><a href="https://hilaxmedia.com/10-hacks-to-build-a-good-website-design"
+	title="10 Hacks to Build A Good Website Design">10 Hacks to Build A Good Website Design</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/How-To-Create-A-Website-With-Wordpress"
+ title="How To Create A Website With Wordpress">How To Create A Website With Wordpress</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/Redirect-to-www-or-non-www"
+title="Redirect to wwww or non www">Redirect to wwww or non www</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/Top-10-Amazing-CMS-For-Every-Web-Designer"
+title="Top 10 Amazing CMS For Every Web Designer">Top 10 Amazing CMS For Every Web-Designer</a></li>
+
+<li class="lpage"><a href="https://www.hilaxmedia.com/What-is-Wordpress"
+	title="What is Wordpress? Explained For Beginners">What is Wordpress? Explained For Beginners</a></li>
+
+
+	
 <li class="lpage"><a href="https://hilaxmedia.com/contact" title="Website Design | Web Design in Ghana | Hilax Media">Website Design | Web Design in Ghana | Hilax Media</a></li>
 <li class="lpage"><a href="https://hilaxmedia.com/our-work" title="Portfolio | Web Design Company in Ghana | Hilax Media">Portfolio | Web Design Company in Ghana | Hilax Media</a></li>
 <li class="lpage"><a href="https://hilaxmedia.com/vega" title="Portfolio - Vega Gym| Web Design Company in Ghana | Hilax Media">Portfolio - Vega Gym| Web Design Company in Ghana | Hilax Media</a></li>
@@ -247,15 +271,11 @@ Total pages: 13</span>
 </ul></li>
 </ul></li>
 </ul>
-		<!--
-Please note:
-You are not allowed to remove the copyright notice below.
-Thank you!
-www.xml-sitemaps.com
--->
+	
 	</div>
 	<div id="footer">
-		Page created with <a target="_blank" href="https://www.xml-sitemaps.com">Google XML sitemap and html sitemaps generator</a> | Copyright &copy; 2005-2019 XML-Sitemaps.com
+		 <a target="_blank" href="https://hilaxmedia.com">
+			Sitemap For Hilax Media</a> | Copyright &copy; 2018-2019 Hilaxmedia.com
 	</div>
 </body>
 
