--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
         a superior <b><i>website design</i></b> in a timely manner, but also to ensure that every need of our customer
          is met or exceeded.</p>
       </div>
-      <a href="Web-Design" class="btn-1"> Learn on Web Design </a>
+      <a href="Web-Design" class="btn-1"> Web Design </a>
   </div>
   <div class="col-md-4">
       <img src="img/Web Design In Ghana.png" alt="website design banner">
