--- a/assurance-consults.html
+++ b/assurance-consults.html
@@ -49,7 +49,7 @@ Website Development, E-Commerce. Call Us: +233570816171.">
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Portfolio - Vega Gym| Web Design Company in Ghana | Hilax Media</title>
+<title>Portfolio - Assurance Consults| Web Design Company in Ghana | Hilax Media</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
