--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
 <meta name="designer" content="Emmanuel Koomson">
 <meta name="reply-to" content="hilaxmedia.com@gmail.com">
 <meta name="owner" content="Hilax Media Web Design and Digital Marketing Agency">
-<meta name="subject" content="Website Design & Best Web Design Services In Ghana,Leading Web Design Company in Ghana">
+<meta name="subject" content="Blog - Get the Latest Post on web design and Digital marketing - Professional Web Design">
 <meta name="copyright"content="Hilax Media">
 <meta name="language" content="ES">
 <meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
@@ -41,22 +41,19 @@
 <meta name="og:region" content="Western"/>
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
-<meta name="description" content="Website development Experts | Professional Website Designers in Ghana - 
-Get professional Website design at affordable prices.Professional Web Design">
-<meta name="keywords" content="Website development, Professional Web Design ,Ghana Website Designers">
-<meta property="og:title" content="Web Design| Hilax Media Website Development & Digital Marketing In Ghana|
- Leading Website Designers" />
+<meta name="description" content="Blog - Get the Latest Post on web design and Digital marketing - Professional Web Design">
+<meta name="keywords" content="How to create a website with wordpress,5 effective tip of responsive web design , Ghana Website Designers">
+<meta property="og:title" content="Blog on lastest Articles on Web Design and Web Development" />
  <meta property="og:type" content="website" />
 <meta name="geo.region" content="GH-WP" />
 <meta name="geo.placename" content="Takoradi" />
 <meta name="geo.position" content="4.887401;-1.751932" />
 <meta name="ICBM" content="4.887401, -1.751932" />
-<meta property="og:description" content="Website development Experts | Professional Website Designers in Ghana - 
-Get professional Website design at affordable prices.Professional Web Design">
+<meta property="og:description" content="Blog - Get the Latest Post on web design and Digital marketing - Professional Web Design">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta property="og:phone_number" content="+233570816171" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
-<meta property="og:url" content="https://www.hilaxmedia.com/Web Design.html"/>
+<meta property="og:url" content="https://www.hilaxmedia.com/blog.html"/>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
@@ -68,7 +65,7 @@ Get professional Website design at affordable prices.Professional Web Design">
 lunk
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Blog | Website Designers in Ghana</title>
+<title> Blog | Website Designers in Ghana</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
