--- a/assurance-consults.html
+++ b/assurance-consults.html
@@ -15,15 +15,12 @@
 <meta name="target" content="all"/>
 <meta name="audience" content="all"/>                            
 <meta name="rating" content="safe for kids"/>
-<meta name="description" content="Website design Experts | Best Leading Web Design Company in Ghana - 
-Website Development, E-Commerce. Call Us: +233570816171.">
-<meta name="keywords" content="Website design, web design , website">
+<meta name="description" content="Assurance Consults">
+<meta name="keywords" content="Assurance Consults">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Home| Hilax Media Website Development & Digital Marketing In Ghana|
- Leading Website Designers" />
+<meta property="og:title" content="Assurance Consults" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta property="og:description" content="Best Leading Web Design Company in Ghana - Experts in Website design,
- Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +233570816171. ">
+<meta property="og:description" content="Assurance Consults Services ">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta property="og:phone_number" content="+233570816171" />
 <meta property="og:type" content="website" />
