--- a/masterplus.html
+++ b/masterplus.html
@@ -15,15 +15,12 @@
 <meta name="target" content="all"/>
 <meta name="audience" content="all"/>                            
 <meta name="rating" content="safe for kids"/>
-<meta name="description" content="Website design Experts | Best Leading Web Design Company in Ghana - 
-Website Development, E-Commerce. Call Us: +233570816171.">
-<meta name="keywords" content="Website design, web design , website">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Home| Hilax Media Website Development & Digital Marketing In Ghana|
- Leading Website Designers" />
+<meta name="description" content="Master Plus">
+<meta name="keywords" content="Master Plus Web Design">
+
+<meta property="og:title" content="Master Plus web Design" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta property="og:description" content="Best Leading Web Design Company in Ghana - Experts in Website design,
- Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +233570816171. ">
+<meta property="og:description" content="Master Plus">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta property="og:phone_number" content="+233570816171" />
 <meta property="og:type" content="website" />
@@ -41,7 +38,7 @@ Website Development, E-Commerce. Call Us: +233570816171.">
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
-<meta property="og:url" content="https://www.hilaxmedia.com/index.html" />
+<meta property="og:url" content="https://www.hilaxmedia.com/masterplus.html" />
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
