--- a/5-Website-Builders-That-Actuall-Works-!.html
+++ b/5-Website-Builders-That-Actuall-Works-!.html
@@ -71,7 +71,7 @@ choice for people who are short on budget or people with less to spend on a web 
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta property="og:phone_number" content="+233570816171" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
-<meta property="og:url" content="https://www.hilaxmedia.com/5-Website-Builders-That-Actuall-Works-!.html"/>
+<meta property="og:url" content="https://www.hilaxmedia.com/5-Website-Builders-That-Actually-Works-!.html"/>
 
 <!-- twitter  -->
 <meta name="twitter:card" content="summary" />
@@ -80,7 +80,7 @@ choice for people who are short on budget or people with less to spend on a web 
  who are short on budget or people with less to spend on a web developer. " />
 
 <meta name="twitter:site" content="https://www.hilaxmedia.com"/>
-<meta name="twitter:url" content="https://www.hilaxmedia.com/5-Website-Builders-That-Actuall-Works-!.html">
+<meta name="twitter:url" content="https://www.hilaxmedia.com/5-Website-Builders-That-Actually-Works-!.html">
 <!-- twitter  -->
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -91,7 +91,7 @@ choice for people who are short on budget or people with less to spend on a web 
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>5 Website Builders That Actuall Works !</title>
+<title>5 Website Builders That Actually Works !</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
