--- a/sitemap.html
+++ b/sitemap.html
@@ -235,8 +235,8 @@ Total pages: 20</span>
 <li class="lpage"><a href="https://hilaxmedia.com/blog"
 title="Blog | Website Designers in Ghana">Blog | Website Designers in Ghana</a></li>
 
-<li class="lpage"><a href="https://www.hilaxmedia.com/5-Website-Builders-That-Actuall-Works-!"
- title="5 Website Builders That Actuall Works !">5 Website Builders That Actuall Works !</a></li>
+<li class="lpage"><a href="https://www.hilaxmedia.com/5-Website-Builders-That-Actually-Works-!"
+ title="5 Website Builders That Actually Works !">5 Website Builders That Actually Works !</a></li>
 
 <li class="lpage"><a href="https://www.hilaxmedia.com/5-Effective-Tips-Of-Responsive-Web-Design"
  title="5 Effective Tips Of Responsive Web Design">5 Effective Tips Of Responsive Web Design</a></li>
