--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly"content="True"/>
 <meta name="MSThemeCompatible"content="no"/>
+<link rel="canonical" href="https://hilaxmedia.com/" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="translucent black"/>
