--- a/Redirect-to-www-or-non-www.html
+++ b/Redirect-to-www-or-non-www.html
@@ -2,6 +2,7 @@
 <html encoding="UTF-8" dir="ltr" lang="en-US" language="English" prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
 <head>
 <meta charset="UTF-8">
+ <link rel="canonical" href="https://www.hilaxmedia.com/Redirect-to-www-or-non-www" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly"content="True"/>
 <meta name="MSThemeCompatible"content="no"/>
