--- a/Top-10-Amazing-CMS-For-Every-Web-Designer.html
+++ b/Top-10-Amazing-CMS-For-Every-Web-Designer.html
@@ -2,6 +2,7 @@
 <html encoding="UTF-8" dir="ltr" lang="en-US" language="English" prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
 <head>
 <meta charset="UTF-8">
+ <link rel="canonical"https://www.hilaxmedia.com/Top-10-Amazing-CMS-For-Every-Web-Designer/" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly"content="True"/>
 <meta name="MSThemeCompatible"content="no"/>
