--- a/index.html
+++ b/index.html
@@ -372,16 +372,13 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
 
 <div class="col-md-6 section-4b text-wrap">
   <h2>Support <span>Hosting</span></h2>
-  <p>We take care of the technical stuff, so you can focus on the fun stuff.
-    Our website support and maintenance services provide a resource for any technical issue 
-    that may arise for your business.  We offer several monthly website maintenance plans that include 24/7 web uptime, 
-    downtime, and performance monitoring. In addition, we handle backups, malware and virus scanning, protection from 
-    hackers, broken link fixes, domain name management and much more.We also provide web hosting that offers visitors 
-    to your site a seamless, trouble-free experience. The load speed and performance of your site is more important
-     now than ever — users will no longer wait for a slow-loading site. Beyond user experience, poor load speeds
-      can negatively affect your site’s
-       search engine ranking. We continually search for and manage these issues so your website truly performs
-        as it should.</p>
+  <p>We take care of the technical issues, so you can concentrate on your business. 
+   Our website support and maintenance services produce a resource for any technical 
+   issue that may arise for your business. We offer different monthly website maintenance 
+   plans that include 24/7 web uptime, downtime, and performance monitoring. 
+   Also, we handle backups, malware and virus scanning, protection from hackers,
+   broken link fixes, domain name management and much more. We also render web hosting that offers visitors to your site a seamless, trouble-free experience. The load speed and performance of your site is more relevant now than ever — users will no longer wait for a slow-loading site. Beyond user experience, poor load speeds can negatively affect
+   your site’s search engine ranking. We regularly search for and manage these issues so your website truly performs as it should.</p>
    <!-- <h2 class="heading"><b><i>Web Design & Digital Marketing </i></b><span> Services </span></h2>
   <h3>build your Brand Online with a Compelling Visual Story & Great Web Design</h3>
 
