--- a/What-is-Wordpress.html
+++ b/What-is-Wordpress.html
@@ -363,10 +363,10 @@
       <h2><b>How do I get started using WordPress?</b></h2>
       <p>Now you’re certainly asking, “how do I get it?” <br>
         <br>
-          <a href="WordPress.org">WordPress</a>  is free. Yep, that’s right – it’s 100% free.
+          <a href="https://wordpress.org/">WordPress</a>  is free. Yep, that’s right – it’s 100% free.
           WordPress can be downloaded for self-hosted installations
-           from <a href="WordPress.org">WordPress.org</a> or it can also be used as a hosted service
-            via <a href="WordPress.com">WordPress.com.</a>
+           from <a href="https://wordpress.org/">WordPress.org</a> or it can also be used as a hosted service
+            via <a href="https://wordpress.com/">WordPress.com.</a>
           So, what are you waiting for? Go get WordPress today to 
            <a href="https://www.hilaxmedia.com/How-To-Create-A-Website-With-Wordpress">start 
             creating your awesome website.</a>  </p>
