--- a/What-is-Wordpress.html
+++ b/What-is-Wordpress.html
@@ -383,7 +383,7 @@
                 With tools for everyone from personal bloggers to large corporations, 
                 this powerful content management system (cms) is user-friendly
                  even for beginners and aims to make it possible for anyone to create
-                  an online presence in minutes. The <a href="wordpress.org">WordPress</a> platform
+                  an online presence in minutes. The <a href="https://wordpress.org/">WordPress</a> platform
                    is flexible, scalable and always free to use. </p>
 
   <h2 class="ml-5">Share This</h2>
