--- a/services.html
+++ b/services.html
@@ -182,7 +182,7 @@ web design company in Accra, focused in professional web design services at affo
       <li class="mb-4">Digital Marketing Services</li>
      </ul>
     
-        <a href="#" class="btn-1 mt-4">Our Work</a>
+        <a href="https://hilaxmedia.com/contact" class="btn-1 mt-4">Say Hi</a>
         <div class="spacing-1"></div>
     </div>
 
