--- a/services.html
+++ b/services.html
@@ -405,7 +405,7 @@ web design company in Accra, focused in professional web design services at affo
        <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
               <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
               <a href="https://www.linkedin.com/in/hilaxmedia/"target="_blank" > <i class="fab fa-linkedin-in fa-2x"></i></a>
-              <a href="#"target="_blank" target="_blank" ><i class="fab fa-whatsapp fa-2x"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=+233570816171"target="_blank" target="_blank" ><i class="fab fa-whatsapp fa-2x"></i></a>
      </div>
      <div class="col-md-4">
          <h4>Services</h4>
@@ -431,22 +431,7 @@ web design company in Accra, focused in professional web design services at affo
  
            </ul>
          </div>
-         <!-- <div class="col-md-3">
-             <h4>Reach us</h4>
-              <div class="line"></div>
-              <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
-              <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="https://www.linkedin.com/in/hilaxmedia/"target="_blank" > <i class="fab fa-linkedin-in fa-2x"></i></a>
-              <a href="#"target="_blank" target="_blank" ><i class="fab fa-whatsapp fa-2x"></i></a>
-              <div class="reach">
-              <h4>Contact </h4>
-              <div class="contact">
-             <a href="Tel:0570816171">0570816171</a> <a href="Tel:0248029408"> / 0248029408</a><br>
-             <a href="mailto:hilaxmedia.com@gmail.com" target="_blank">hilaxmedia.com@gmail.com</a> 
-             </div>
-             </div>
-             
-         </div>    -->
+      
    </div>
   <div class="footer-section-2 mt-2">
     <h5>© 2019 Hilax Media Web Agency . <a href="#" target="_blank">Terms & Conditions</a> . All Rights Reserved.
