--- a/index.html
+++ b/index.html
@@ -221,21 +221,22 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
   </div>
 </div>
 <div class="row recent-work">
-  <div class="col-md-3 wrk mb-4">
-      <a href="vega"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" alt="vega-gym" ></a>
+  <div class="col-md-3 wrk mb-4 hov">
+       <a href="theadvancedlasersmile"><img src="img/portfolio/advan 2_imac2013_left.png" ></a> 
+   
   </div>
   <!-- <div class="layer-txt">
      <a href="vega" class="btn-1">View Work</a> <p></p>
     </div> -->
   <div class="col-md-3">
-      <a href="masterplus"><img src="img/portfolio/masterpluscleaning. imac left.png" alt="masterplus"></a>
+    <a href="vega"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a> 
   </div>
   <!-- <div class="wrk-1-txt">
       <a href="masterplus" class="btn-2">View Work</a> <p></p>
      </div> -->
      <div class="spacing"></div>
      <div class="col-md-3 wrk-1">
-        <a href="assurance-consults"><img src="img/portfolio/2019-11-06-18-58-quanticalabs.com_imac2013_right.png" alt="assurance consluts"></a>
+      <a href="masterplus"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
     </div>
     <!-- <div class="wrk-1-txt">
         <a href="masterplus" class="btn-2">View Work</a> <p></p>
