--- a/index.html
+++ b/index.html
@@ -217,26 +217,26 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
   <div class="col-md-12">
       <h2 class="text-center">Recent <span>Work</span></h2>
       <div class="line-1 mb-4"></div>
-      <a href="Our-Work" class="btn-1">View Work</a> 
+      <a href="Our-Work" target="_blank" class="btn-1">View Work</a> 
   </div>
 </div>
 <div class="row recent-work">
   <div class="col-md-3 wrk mb-4 hov">
-       <a href="theadvancedlasersmile"><img src="img/portfolio/advan 2_imac2013_left.png" ></a> 
+       <a href="theadvancedlasersmile" target="_blank"><img src="img/portfolio/advan 2_imac2013_left.png" ></a> 
    
   </div>
   <!-- <div class="layer-txt">
      <a href="vega" class="btn-1">View Work</a> <p></p>
     </div> -->
   <div class="col-md-3">
-    <a href="vega"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a> 
+    <a href="vega"target="_blank"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a> 
   </div>
   <!-- <div class="wrk-1-txt">
       <a href="masterplus" class="btn-2">View Work</a> <p></p>
      </div> -->
      <div class="spacing"></div>
      <div class="col-md-3 wrk-1">
-      <a href="masterplus"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
+      <a href="masterplus"target="_blank"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
     </div>
     <!-- <div class="wrk-1-txt">
         <a href="masterplus" class="btn-2">View Work</a> <p></p>
