--- a/vega.html
+++ b/vega.html
@@ -12,30 +12,7 @@
 <meta name="mssmarttagspreventparsing" content="true"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- <meta http-equiv="refresh" content="30" /> -->
-<meta name="target" content="all"/>
-<meta name="audience" content="all"/>                            
-<meta name="rating" content="safe for kids"/>
-<meta name="description" content="Vega Gym">
-<meta name="keywords" content="Vega Gym Web Design">
-<meta property="og:title" content="Vega Gym and Fitness" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta property="og:description" content="Vega Gym">
-<meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
-<meta property="og:phone_number" content="+233570816171" />
-<meta property="og:type" content="website" />
-<meta name="geo.region" content="GH" />
-<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
-<meta name="geo.placename" content="Accra" />
-<meta name="geo.position" content="5.560014;-0.205744" />
-<meta name="ICBM" content="5.560014, -0.205744" />
-<meta name="og:email" content="hilaxmedia.com@gmail.com"/>
-<meta name="og:latitude" content="4.887401"/>
-<meta name="og:longitude" content="-1.751932"/>
-<meta name="og:street-address" content="Market Circle Takoradi,Western Region"/>
-<meta name="og:locality" content="Sekondi-Takoradi,Western Region"/>
-<meta name="og:region" content="Western"/>
-<meta name="og:postal-code" content="657 Takoradi, Western Region"/>
-<meta name="og:country-name" content="Ghana"/>
+
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
 <meta property="og:url" content="https://www.hilaxmedia.com/index.html" />
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -45,7 +22,7 @@
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Portfolio - Vega Gym| Web Design Company in Ghana | Hilax Media</title>
+<title>Portfolio | Vega Gym</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
@@ -136,15 +113,15 @@
 <!-- navigation -->
 
 <main>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-12 low bg-dark p-5">
         <h2>Vega Gym And Fittness</h2>
         <h1>Responsive and Mobile Friendly Design</h1>
     </div>
-  </div>
+  </div> -->
    
   <div class="row vega-page">
-      <div class="col-md-12 mt-5">
+      <div class="col-md-12">
          <img src="img/portfolio/vega gym.png" alt="">
       </div>
     </div>
