--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
        
    </div>
   <div class="footer-section-2 mt-2">
-    <h5>© 2019 Hilax Media Web Agency . <a href="Term" target="_blank">Terms & Conditions</a> . All Rights Reserved.
+    <h5>© 2019 Hilax Media Web Agency . <a href="Terms" target="_blank">Terms & Conditions</a> . All Rights Reserved.
     </h5> | <a href="sitemap" target="_blank">Sitemap</a> |
   </div>
 </footer>
