--- a/Contact.html
+++ b/Contact.html
@@ -61,7 +61,7 @@
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Website Design | Web Design in Ghana | Hilax Media</title>
+<title>Contact Us | Hilax Media</title>
 </head>
 <body>
     <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i> </a>
