--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@ web design company in Accra, focused in professional web design services at affo
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Accra Web Design Company, Ecommerce, & Marketing Services</title>
+<title> Ghana Web Design Company, Ecommerce, & Marketing Services</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
