--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
                           <a class="nav-link" href="Our-Work" target="_blank">Our Works</a>
                         </li>
                     </li>
+               <li class="nav-item">
+                          <a class="nav-link" href="Jobs" target="_blank">Jobs</a>
+                        </li>
+
               </ul>
             </div>
           </nav>
