--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,9 @@ lunk
     })(window,document,'script','dataLayer','GTM-WJZZVKF');</script>
     <!-- End Google Tag Manager -->
 
-    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5dce59113cb65c00190122e1&product=inline-share-buttons" async="async"></script>
+   
+ <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5dce59113cb65c00190122e1&product=inline-share-buttons" async="async"></script>
+<script data-ad-client="ca-pub-8537185102779416" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
