--- a/index.html
+++ b/index.html
@@ -525,7 +525,17 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
 </footer>
 </main>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
