--- a/blog.html
+++ b/blog.html
@@ -210,6 +210,19 @@ lunk
       </a>
     </div>
 
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <!-- second carousel  -->
     <div id="carouselId" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
