--- a/services.html
+++ b/services.html
@@ -307,7 +307,17 @@ web design company in Accra, focused in professional web design services at affo
              </div>
     </div>
 
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <div class="process p-5">
     <div class="row text-center">
