--- a/10-Hacks-to-Build-A-Good-Website-Design.html
+++ b/10-Hacks-to-Build-A-Good-Website-Design.html
@@ -203,6 +203,17 @@ and fulfils its expected functionality enhances the great user experience " />
             <div class="sharethis-inline-share-buttons"></div>
       <hr>
       <!-- share buttons  -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
    
         <h2><b>10 Priniciples Of Good Web Design</b></h2>
         <p><b>Why <b>Good Website Design</b> is great for business?  When people search for something you offer or 
