--- a/5-Effective-Tips-Of-Responsive-Web-Design.html
+++ b/5-Effective-Tips-Of-Responsive-Web-Design.html
@@ -192,6 +192,20 @@
             <a href="blog">Web Design</a> 
             | 36 Comments | Views (574)</p>
       <!-- share buttons  -->
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
       <hr>
             <div class="sharethis-inline-share-buttons"></div>
       <hr>
