--- a/5-Website-Builders-That-Actually-Works-!.html
+++ b/5-Website-Builders-That-Actually-Works-!.html
@@ -113,6 +113,8 @@ choice for people who are short on budget or people with less to spend on a web 
 <!-- share bottom  -->
 <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5dce59113cb65c00190122e1&product=inline-share-buttons" async="async"></script>
 <!-- share ends  -->
+
+
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -203,6 +205,19 @@ choice for people who are short on budget or people with less to spend on a web 
       <hr>
       <!-- share buttons  -->
    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hilax -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8537185102779416"
+     data-ad-slot="4158206788"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
         <h2><b>Top 5 Website Builders That Actually Works !</b></h2>
         <p><b>
             Website builders can be a good choice for people who are short on budget or people
