--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
     })(window,document,'script','dataLayer','GTM-WJZZVKF');</script>
     <!-- End Google Tag Manager -->
 
-
+<script data-ad-client="ca-pub-9450983624124679" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
  </head>
 
